# XMBControl

./: .gitignore  CMakeLists.txt  Makefile  README.md  exports.exp  main.c  stub.S
include/: battery.h  main.h  plugins.h  settings.h  utils.h
src/: battery.c  config.c  list.c  plugins.c  settings.c  utils.c  vshmenu.c  xmbpatch.c
